<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity=""
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/review_tooSweet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/tooSweet_label" />

            <CheckBox
                android:id="@+id/review_tooBitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/tooBitter_label" />

            <CheckBox
                android:id="@+id/review_tooSoft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/tooSoft_label" />

            <CheckBox
                android:id="@+id/review_tooCrunchy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/tooCrunchy_label" />

            <CheckBox
                android:id="@+id/review_Perfect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/perfect_label" />
        </LinearLayout>
    </LinearLayout>
